# ICP_Project

./: CMakeLists.txt  Doxyfile  Makefile  README.txt
examples/: classDiagram.json  save.json
src/: CMakeLists.txt  main.cpp
src/controller/: DeleteObjectPopUp.cpp  GClassDiagram.cpp  GClassSettings.cpp  GClassifier.cpp  GMessage.cpp  GObject.cpp  GRelation.cpp  GSequenceDiagram.cpp  GText.cpp  GTimeline.cpp  GraphicsScene.cpp  mainwindow.cpp
src/include/: ClassDiagram.h  CommandBuilder.h  DeleteObjectPopUp.h  Element.h  GClassDiagram.h  GClassSettings.h  GClassifier.h  GMessage.h  GObject.h  GRelation.h  GSequenceDiagram.h  GText.h  GTimeline.h  GraphicsScene.h  ICommand.h  IObserver.h  ISubject.h  JsonParser.h  SequenceDiagram.h  UMLAttribute.h  UMLClass.h  UMLClassifier.h  UMLInterface.h  UMLMessage.h  UMLObject.h  UMLOperation.h  UMLRelation.h  mainwindow.h
src/model/: ClassDiagram.cpp  CommandBuilder.cpp  Element.cpp  JsonParser.cpp  SequenceDiagram.cpp  UMLAttribute.cpp  UMLClass.cpp  UMLClassifier.cpp  UMLInterface.cpp  UMLMessage.cpp  UMLObject.cpp  UMLOperation.cpp  UMLRelation.cpp
src/view/: DeleteObjectPopUp.ui  mainwindow.ui
tests/: CMakeLists.txt  ClassifierTests.cpp  JsonParser.cpp  testClass.cpp
